# workshops

./: README.md
evm-getting-started/: README.md
evm-getting-started/metamask-example/: .gitignore  package-lock.json  package.json
evm-getting-started/metamask-example/public/: test
evm-getting-started/metamask-example/src/: App.js
evm-getting-started/node/: deploy.js  execute.js  package-lock.json  package.json  query.js  reset.js
evm-getting-started/secret-contract-example/: Cargo.toml
evm-getting-started/secret-contract-example/src/: contract.rs  state.rs
